--- a/index.html
+++ b/index.html
@@ -199,7 +199,9 @@
   </div>
 </div>
 <!-- footer section end hare -->
+<!-- javaScript link section start hare -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
     <p class="text-center">Copyright By Arif Adnan © 2022 </p>
+    <!-- javaScript Section end hare -->
 </body>
 </html>
